[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sound/Sound effects/Tree/rustle.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Images/Weeds/B1.png" type="Texture" id=2]
[ext_resource path="res://World/Objects/Nature/Grasses/Weed.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/Animations/leaf break/leaf break.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "animate"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0, -6.0, 3.0, -3.0, 0.0 ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 6.08276

[node name="Weed" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )
offset = Vector2( 0, -32 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -14 )
stream = ExtResource( 1 )
volume_db = -24.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animate = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, -15.5 )
scale = Vector2( 1.85, 1.65 )

[node name="LeafBreak" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -4, -4 )
collision_layer = 2049
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -10 )
shape = SubResource( 12 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
